Add Vite configuration for React project with Material-UI Carousel

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@ yarn-error.log*
 
 #ide
 /.idea
+.vs/react-material-ui-carousel_mui6/CopilotIndices/17.12.38.29086/CodeChunks.db
+.vs/react-material-ui-carousel_mui6/CopilotIndices/17.12.38.29086/CodeChunks.db-shm
+.vs/react-material-ui-carousel_mui6/CopilotIndices/17.12.38.29086/CodeChunks.db-wal
+.vs/react-material-ui-carousel_mui6/CopilotIndices/17.12.38.29086/SemanticSymbols.db
+.vs/react-material-ui-carousel_mui6/CopilotIndices/17.12.38.29086/SemanticSymbols.db-shm
+.vs/react-material-ui-carousel_mui6/CopilotIndices/17.12.38.29086/SemanticSymbols.db-wal
