--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "react-material-ui-carousel",
-    "version": "3.4.2",
+    "name": "@cloudscape_innovation/react-material-ui-carousel",
+    "version": "4.1.0",
     "license": "MIT",
     "description": "A Generic, extendible Carousel UI component for React using Material UI",
-    "homepage": "https://learus.github.io/react-material-ui-carousel",
+    "homepage": "https://github.com/cloudscape-innovation/react-material-ui-carousel",
     "repository": {
         "type": "git",
-        "url": "https://github.com/Learus/react-material-ui-carousel"
+        "url": "git+https://github.com/cloudscape-innovation/react-material-ui-carousel.git"
     },
     "keywords": [
         "react",
@@ -49,29 +49,32 @@
         ]
     },
     "dependencies": {
-        "@emotion/react": "^11.7.1",
-        "@emotion/styled": "^11.6.0",
-        "@mui/icons-material": "^5.4.1",
-        "@mui/material": "^5.4.1",
-        "@mui/system": "^5.4.1",
-        "framer-motion": "^4.1.17"
+        "@emotion/react": "^11.13.3",
+        "@emotion/styled": "^11.13.0",
+        "@mui/icons-material": "^5.15.0",
+        "@mui/material": "^5.15.0",
+        "@mui/system": "^5.15.0",
+        "framer-motion": "^11.11.17"
     },
     "devDependencies": {
+        "@types/react": "^18.3.12",
+        "@types/react-dom": "^18.3.1",
         "babel-cli": "^6.26.0",
         "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.24.1",
         "babel-preset-stage-2": "^6.24.1",
-        "gh-pages": "^2.2.0",
-        "react-scripts": "^4.0.3",
-        "typescript": "^4.4.4"
+        "gh-pages": "^4.0.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "typescript": "^5.7.2"
     },
     "peerDependencies": {
         "@emotion/react": "^11.4.1",
         "@emotion/styled": "^11.3.0",
-        "@mui/icons-material": "^5.0.0",
-        "@mui/material": "^5.0.0",
-        "@mui/system": "^5.0.0",
-        "react": "^17.0.1 || ^18.0.0",
-        "react-dom": "^17.0.2 || ^18.0.0"
+        "@mui/icons-material": "^5.0.0 || ^6.0.0",
+        "@mui/material": "^5.0.0 || ^6.0.0",
+        "@mui/system": "^5.0.0 || ^6.0.0",
+        "react": "^17.0.1 || ^18.0.0 || ^19.0.0",
+        "react-dom": "^17.0.2 || ^18.0.0 || ^19.0.0"
     }
 }
