--- a/demo/package.json
+++ b/demo/package.json
@@ -4,34 +4,27 @@
   "private": true,
   "homepage": "https://learus.github.io/react-material-ui-carousel",
   "dependencies": {
-    "@emotion/babel-plugin": "^11.7.2",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.0",
-    "@mui/material": "^5.0.0",
-    "@mui/system": "^5.8.1",
-    "@types/react-dom": "^17.0.10",
-    "axios": "^0.24.0",
-    "framer-motion": "^4.1.17",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-material-ui-carousel": "^3.4.1",
-    "react-scripts": "^4.0.3"
-  },
-  "resolutions": {
-    "//": "See https://github.com/facebook/create-react-app/issues/11773",
-    "react-error-overlay": "6.0.9"
+    "@emotion/babel-plugin": "^11.12.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/material": "^5.15.0",
+    "@mui/system": "^5.15.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "axios": "^1.7.7",
+    "framer-motion": "^11.11.17",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-material-ui-carousel": "file:../"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "start": "vite",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "deploy": "gh-pages -d dist"
   },
   "browserslist": {
     "production": [
@@ -46,8 +39,11 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0",
-    "sass": "^1.49.9",
-    "typescript": "^4.4.4"
+    "@types/node": "^22.10.1",
+    "@vitejs/plugin-react": "^4.3.4",
+    "gh-pages": "^4.0.0",
+    "sass": "^1.81.0",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.7"
   }
 }
